--- a/app/src/main/res/layout/row_add_control.xml
+++ b/app/src/main/res/layout/row_add_control.xml
@@ -9,40 +9,53 @@
     android:paddingBottom="5dp">
 
     <EditText
-        android:id="@+id/btn_edit_ctrl"
+        android:id="@+id/et_control_name"
         android:hint="Control Name"
-        android:paddingStart="10dp"
-        android:paddingEnd="10dp"
+        android:textAlignment="center"
         android:textSize="14sp"
         android:layout_marginStart="10dp"
+        android:layout_marginEnd="3dp"
+        android:layout_width="0dp"
+        android:layout_height="48dp"
+        android:layout_weight="1"
+        android:textStyle="bold"
+        android:background="@drawable/round_grey"
+        tools:ignore="SpeakableTextPresentCheck" />
+
+    <EditText
+        android:id="@+id/et_dev_addr"
+        android:hint="Device Address"
+        android:textAlignment="center"
+        android:textSize="14sp"
+        android:layout_marginStart="3dp"
         android:layout_marginEnd="5dp"
         android:layout_width="0dp"
         android:layout_height="48dp"
         android:layout_weight="1"
         android:background="@drawable/round_grey"
-        tools:ignore="SpeakableTextPresentCheck" />
+        tools:ignore="SpeakableTextPresentCheck"/>
 
-    <FrameLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@drawable/round_grey">
-
-        <androidx.appcompat.widget.AppCompatSpinner
-            android:id="@+id/spinner"
-            android:layout_width="150dp"
-            android:layout_height="48dp"
-            tools:ignore="SpeakableTextPresentCheck" />
-    </FrameLayout>
-
+    <EditText
+        android:id="@+id/et_cmd_code"
+        android:hint="Command Code"
+        android:textAlignment="center"
+        android:textSize="14sp"
+        android:layout_marginStart="3dp"
+        android:layout_marginEnd="3dp"
+        android:layout_width="0dp"
+        android:layout_height="48dp"
+        android:layout_weight="1"
+        android:background="@drawable/round_grey"
+        tools:ignore="SpeakableTextPresentCheck"/>
 
     <ImageView
-        android:id="@+id/img_remove"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
+        android:id="@+id/img_transmit"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
         android:src="@drawable/ic_play"
-        app:tint="@color/green"
-        android:layout_marginStart="10sp"
-        android:layout_marginEnd="5dp"
+        app:tint="@color/purple_700"
+        android:layout_marginStart="5sp"
+        android:layout_marginEnd="10dp"
         android:layout_gravity="center_vertical"/>
 
 </LinearLayout>
