--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -8,12 +8,41 @@
     android:orientation="vertical"
     android:focusable="true"
     android:focusableInTouchMode="true">
+    <LinearLayout
+        android:id="@+id/layout_mode"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/white"
+        android:orientation="horizontal"
+        android:paddingTop="20dp"
+        android:paddingBottom="20dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0">
+
+        <ImageView
+            android:layout_width="0dp"
+            android:layout_height="30dp"
+            android:layout_weight="1"
+            android:src="@drawable/ic_baseline_settings_remote_24"
+            app:tint="@color/purple_500"
+            tools:ignore="ContentDescription" />
+
+        <ImageView
+            android:id="@+id/btn_offtime_scheduler"
+            android:layout_width="0dp"
+            android:layout_height="30dp"
+            android:layout_gravity="bottom|center"
+            android:layout_weight="1"
+            android:src="@drawable/ic_tvtimer"
+            app:tint="@color/purple_200" />
+    </LinearLayout>
 
     <ScrollView
         android:id="@+id/scrollview"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/layout_mode"
         app:layout_constraintVertical_bias="0"
         android:paddingBottom="100dp">
 
@@ -25,10 +54,11 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10sp">
+                android:layout_marginTop="10sp"
+                android:gravity="center"
+                android:textAlignment="center">
 
                 <TextView
-
                     android:layout_width="0sp"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="10dp"
@@ -59,57 +89,39 @@
                 android:id="@+id/layout_list"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"/>
+                android:orientation="vertical"
+                android:paddingBottom="90dp"/>
 
-            <Button
-                android:id="@+id/btn_add_ctrl"
-                android:layout_width="wrap_content"
-                android:layout_height="48dp"
-                android:layout_gravity="end"
-                android:layout_marginTop="10dp"
-                android:layout_marginEnd="10dp"
-                android:layout_marginBottom="15dp"
-                android:background="@drawable/round"
-                android:drawableEnd="@drawable/ic_add"
-                android:paddingStart="10dp"
-                android:paddingEnd="10dp"
-                android:text="Add"
-                android:textAllCaps="false"
-                android:textColor="@color/white"
-                tools:ignore="SpeakableTextPresentCheck" />
+
         </LinearLayout>
 
     </ScrollView>
-
     <LinearLayout
-        android:id="@+id/linearLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/white"
-        android:orientation="horizontal"
-        android:paddingTop="20dp"
-        android:paddingBottom="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1">
-
-        <ImageView
-            android:layout_width="0dp"
-            android:layout_height="30dp"
-            android:layout_weight="1"
-            android:src="@drawable/ic_baseline_settings_remote_24"
-            app:tint="@color/purple_500" />
-
-        <ImageView
-            android:layout_width="0dp"
-            android:layout_height="30dp"
-            android:layout_gravity="bottom|center"
-            android:layout_weight="1"
-            android:src="@drawable/ic_tvtimer"
-            app:tint="@color/purple_200" />
+        android:gravity="center">
+        <Button
+            android:id="@+id/btn_add_ctrl"
+            android:layout_width="wrap_content"
+            android:layout_height="48dp"
+            android:layout_gravity="center"
+            android:layout_marginTop="10dp"
+            android:layout_marginEnd="10dp"
+            android:layout_marginBottom="10dp"
+            android:background="@drawable/round"
+            android:drawableEnd="@drawable/ic_add"
+            android:paddingStart="10dp"
+            android:paddingEnd="10dp"
+            android:text="Add"
+            android:textAllCaps="false"
+            android:textColor="@color/white"
+            tools:ignore="SpeakableTextPresentCheck" />
 
 
     </LinearLayout>
+
+
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
