--- a/app/src/main/res/layout/activity_sleepscheduler.xml
+++ b/app/src/main/res/layout/activity_sleepscheduler.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+
     <LinearLayout
         android:id="@+id/layout_mode"
         android:layout_width="match_parent"
@@ -38,18 +39,40 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:orientation="horizontal"
         android:layout_marginStart="50dp"
         android:layout_marginEnd="50dp"
-        app:flow_verticalBias="0.5">
+        android:orientation="horizontal"
+        app:flow_verticalBias="0.5"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <ListView
+            android:id="@+id/listViewMins"
+            android:layout_width="0sp"
+            android:layout_height="270dp"
+            android:layout_weight="1"
+            android:gravity="center"
+
+            android:scrollbars="none"
+            app:layout_constraintBottom_toTopOf="@id/tvScrollStats" />
+
+        <ListView
+
+            android:id="@+id/listViewHours"
+            android:layout_width="0sp"
+            android:layout_height="270dp"
+            android:layout_weight="1"
+            android:gravity="center"
+
+            android:scrollbars="none"
+            app:layout_constraintBottom_toTopOf="@id/tvScrollStats" />
+
 
         <ScrollView
             android:id="@+id/scrollview_hours"
             android:layout_width="0sp"
             android:layout_height="260dp"
-            android:layout_weight="1"
+            android:layout_weight="0"
             android:scrollbars="none"
             tools:ignore="SpeakableTextPresentCheck">
 
@@ -57,14 +80,14 @@
                 android:id="@+id/layout_hours"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"/>
+                android:orientation="vertical" />
         </ScrollView>
 
         <ScrollView
             android:id="@+id/scrollview_mins"
             android:layout_width="0sp"
             android:layout_height="260dp"
-            android:layout_weight="1"
+            android:layout_weight="0"
             android:scrollbars="none"
             tools:ignore="SpeakableTextPresentCheck">
 
@@ -72,24 +95,26 @@
                 android:id="@+id/layout_mins"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"/>
+                android:orientation="vertical" />
 
         </ScrollView>
 
     </LinearLayout>
 
-    <ListView
-        android:id="@+id/listView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintBottom_toTopOf="@id/tvScrollStats"/>
-
     <TextView
         android:id="@+id/tvScrollStats"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:text="Test"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:text="Test"/>
+        app:layout_constraintEnd_toEndOf="parent" />
+
+
+    <TextView
+        android:id="@+id/tvScrollStats2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Test"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
