--- a/app/src/main/res/layout/row_add_timevalues.xml
+++ b/app/src/main/res/layout/row_add_timevalues.xml
@@ -14,7 +14,7 @@
         android:textAlignment="center"
         android:textSize="60dp"
         android:fontFamily="sans-serif"
-        android:textColor="@color/black"
+        android:textColor="@color/gray"
         android:layout_marginStart="10dp"
         android:layout_marginEnd="3dp"
         android:layout_width="0dp"
